--- a/content/assets/themes/plain_darkroom.css
+++ b/content/assets/themes/plain_darkroom.css
@@ -42,12 +42,8 @@ footer {
 header {
     display: grid;
     grid-template-columns: 1fr 35em 1fr;
-    grid-template-rows: 2em 1fr;
+    grid-template-rows: auto auto;
     border-bottom: 1px solid var(--header-text);
-}
-
-.index header {
-    grid-template-rows: 1fr;
 }
 
 .tag-index header {
@@ -57,6 +53,13 @@ header {
 article > section {
     display: grid;
     grid-template-columns: 1fr 35rem 1fr;
+}
+
+article > #home-page-info {
+    grid-template-columns: 1fr;
+    max-width: 35rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 article > section > * {
@@ -76,19 +79,13 @@ footer {
 }
 
 .logout.link-box {
-    grid-column: 3/4;
+    grid-column: 1/4;
+    grid-row: 1/2;
     justify-self: end;
     text-align: right;
-}
-
-.index .logout.link-box {
     align-self: center;
 }
 
-.tag-index .logout.link-box,
-.article .logout.link-box {
-    grid-column: 2/4;
-}
 
 #home-page-info {
     margin: 1em 0;
@@ -107,10 +104,6 @@ h1 {
     grid-row: 2/3;
     grid-column: 2/3;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
-}
-
-.index h1 {
-    grid-row: 1/2;
 }
 
 h2 {
@@ -350,6 +343,10 @@ nav .footer-home-link-box {
     background-color: var(--input-bg);
     color: var(--plain-text);
     border-radius: 2px;
+}
+
+#theme-selector {
+    font-size: 80%;
 }
 
 #comments input {
